language/move-lang/tests/move_check/naming/standalone_module_ident.exp
error: 

   ┌── tests/move_check/naming/standalone_module_ident.move:9:23 ───
   │
 9 │         let x = 0x2::X;
   │                       ^ Unexpected ';'
   ·
 9 │         let x = 0x2::X;
   │                       - Expected '::'
   │

